--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,4 +5,10 @@ html {
 body {
   font-size: 2.4rem;
   // background-color: peachpuff;
+  display: flex;
+  height: 100vh;
+}
+
+.webgl {
+  margin: auto;
 }
