--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,11 +3,11 @@ html {
 }
 
 body {
-  font-size: 2.4rem;
-  // background-color: peachpuff;
-  display: flex;
+  // font-size: 2.4rem;
+  background-color: #1e1a20;
+  // display: flex;
 
-  height: 100vh;
+  // height: 100vh;
 }
 
 *,
@@ -23,4 +23,21 @@ body {
   top: 0;
   left: 0;
   outline: none;
+}
+
+.section {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  font-family: "Cabin", sans-serif;
+  color: #ffeded;
+  text-transform: uppercase;
+  font-size: 7vmin;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+section:nth-child(odd) {
+  justify-content: flex-end;
 }
