--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,10 +4,11 @@ html {
 
 body {
   // font-size: 2.4rem;
-  background-color: #1e1a20;
+  // background-color: #1e1a20;
+  background: radial-gradient(circle, #692a84 0%, #3c184c 65%);
   // display: flex;
 
-  // height: 100vh;
+  height: 100vh;
 }
 
 *,
@@ -23,6 +24,12 @@ body {
   top: 0;
   left: 0;
   outline: none;
+  // opacity: 0;
+  // transition: opacity 1s;
+
+  // html.model-loaded & {
+  //   opacity: 1;
+  // }
 }
 
 .section {
