--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,7 +37,7 @@ body {
   align-items: center;
   height: 100vh;
   position: relative;
-  font-family: "Cabin", sans-serif;
+  font-family: 'Cabin', sans-serif;
   color: #ffeded;
   text-transform: uppercase;
   font-size: 7vmin;
@@ -47,4 +47,8 @@ body {
 
 section:nth-child(odd) {
   justify-content: flex-end;
+}
+
+*:not(:root):fullscreen::backdrop {
+  background: transparent;
 }
